[metadata]
name = mafiat
author = Daniel James Price
author_email = daniel.price@helsinki.fi
license = BSD 3-Clause
license_files = LICENSE
url = https://github.com/pricedj/mafiat
description = Magnetic Field Analysis Tools
version = 0.2.0
long_description = file: README.rst
classifiers =
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
    ipykernel
    k3d
    matplotlib
    numba==0.55
    numpy
    pysmsh @ git+https://github.com/jpomoell/pysmsh
    scipy
